[project]
name = "d6-roller"
version = "0.1.0"
description = ""
authors = [
    {name = "rbrat",email = "r.bratchenko@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "d6_roller", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
